--- a/src/app/pages/catalogo/catalogo.page.html
+++ b/src/app/pages/catalogo/catalogo.page.html
@@ -3,7 +3,39 @@
     <ion-title>Catalogo</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+  <ion-list>
+    
+    <ion-row>
+      <ion-col size-md="3" size-xs="12">
+        <producto>   
+        </producto>
+      </ion-col>
+      <ion-col size-md="3" size-xs="12">
+        <producto>   
+        </producto>
+      </ion-col>
+      <ion-col size-md="3" size-xs="12">
+        <producto>   
+        </producto>
+      </ion-col>
+      <ion-col size-md="3" size-xs="12">
+        <producto>   
+        </producto>
+      </ion-col>
+      <ion-col size-md="3" size-xs="12">
+        <producto>   
+        </producto>
+      </ion-col>
+      <ion-col size-md="3" size-xs="12">
+        <producto>   
+        </producto>
+      </ion-col>
+    </ion-row>
+    
+  </ion-list>
+<ion-grid>
+  
+  
+</ion-grid>
 </ion-content>
