--- a/src/app/pages/nav-page/nav-page.page.html
+++ b/src/app/pages/nav-page/nav-page.page.html
@@ -1,24 +1,13 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="schedule">
-      <ion-icon name="calendar"></ion-icon>
-      <ion-label>Schedule</ion-label>
-      <ion-badge>6</ion-badge>
+    <ion-tab-button tab="catalogo">
+      <ion-icon name="book-outline"></ion-icon>
+      <ion-label>Catalogo</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="speakers">
-      <ion-icon name="person-circle"></ion-icon>
-      <ion-label>Speakers</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="map">
-      <ion-icon name="map"></ion-icon>
-      <ion-label>Map</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="about">
-      <ion-icon name="information-circle"></ion-icon>
-      <ion-label>About</ion-label>
+    <ion-tab-button tab="buscar">
+      <ion-icon name="search-outline"></ion-icon>
+      <ion-label>Buscar</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
