--- a/src/app/pages/catalogo/catalogo.page.html
+++ b/src/app/pages/catalogo/catalogo.page.html
@@ -1,5 +1,17 @@
+<ion-menu contentId="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu Content</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+</ion-menu>
+
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Catalogo</ion-title>
   </ion-toolbar>
 </ion-header>
