--- a/src/app/pages/buscar/buscar.page.html
+++ b/src/app/pages/buscar/buscar.page.html
@@ -2,8 +2,30 @@
   <ion-toolbar>
     <ion-title>Buscar</ion-title>
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar id="barraBusqueda" placeholder="Buscar"></ion-searchbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list lines="full">
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+    <productoLista></productoLista>
+  </ion-list>
+  
+    
+ 
 </ion-content>
