--- a/src/app/pages/catalogo/catalogo.page.html
+++ b/src/app/pages/catalogo/catalogo.page.html
@@ -1,53 +1,68 @@
 <ion-menu contentId="main-content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu Content</ion-title>
+      <ion-title>NombreUsuario</ion-title>
     </ion-toolbar>
   </ion-header>
-
+  <ion-content>
+    <ion-list lines="full">
+      <ion-item button="true">
+        <ion-icon name="person-outline"></ion-icon>
+        <ion-label>
+          Perfil
+        </ion-label>
+      </ion-item>
+      <ion-item button="true">
+        <ion-icon name="bag-outline"></ion-icon>
+        <ion-label>Ver productors</ion-label>
+      </ion-item>
+      <ion-item button="true" id="itemBottom">
+        <ion-icon name="close-circle-outline"></ion-icon>
+        <ion-label>Cerrar sesión</ion-label>
+      </ion-item>
+    </ion-list>
+    
+  </ion-content>
 </ion-menu>
 
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Catalogo</ion-title>
-  </ion-toolbar>
-</ion-header>
-<ion-content>
-  <ion-list>
-    
-    <ion-row>
-      <ion-col size-md="3" size-xs="12">
-        <producto>   
-        </producto>
-      </ion-col>
-      <ion-col size-md="3" size-xs="12">
-        <producto>   
-        </producto>
-      </ion-col>
-      <ion-col size-md="3" size-xs="12">
-        <producto>   
-        </producto>
-      </ion-col>
-      <ion-col size-md="3" size-xs="12">
-        <producto>   
-        </producto>
-      </ion-col>
-      <ion-col size-md="3" size-xs="12">
-        <producto>   
-        </producto>
-      </ion-col>
-      <ion-col size-md="3" size-xs="12">
-        <producto>   
-        </producto>
-      </ion-col>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content >
+    <ion-list>
+      <ion-row>
+        <ion-col size-md="2" size-xs="6">
+          <producto>   
+          </producto>
+        </ion-col>
+        <ion-col size-md="2" size-xs="6">
+          <producto>   
+          </producto>
+        </ion-col>
+        <ion-col size-md="2" size-xs="6">
+          <producto>   
+          </producto>
+        </ion-col>
+        <ion-col size-md="2" size-xs="6">
+          <producto>   
+          </producto>
+        </ion-col>
+        <ion-col size-md="2" size-xs="6">
+          <producto>   
+          </producto>
+        </ion-col>
+        <ion-col size-md="2" size-xs="6">
+          <producto>   
+          </producto>
+        </ion-col>
+        
     </ion-row>
-    
   </ion-list>
-<ion-grid>
-  
-  
-</ion-grid>
-</ion-content>
+  </ion-content>
+</div>
