--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -1,12 +1,10 @@
 <ion-card>
-  <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+  <img alt="Silhouette of mountains" src="../../../assets/imgs/cp2077.jpg" />
   <ion-card-header>
-    <ion-card-title>Card Title</ion-card-title>
-    <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+    <ion-card-title class="txtTitle">Metal Gear Rising</ion-card-title>
   </ion-card-header>
-
   <ion-card-content>
-    Here's a small text description for the card content. Nothing more, nothing less.
+    49.99€
   </ion-card-content>
 </ion-card>
     
