--- a/src/app/components/producto-lista/producto-lista.component.html
+++ b/src/app/components/producto-lista/producto-lista.component.html
@@ -1,9 +1,15 @@
 <ion-item>
   <ion-thumbnail slot="start" class="miniatura">
-    <img class="img" src="https://ionicframework.com/docs/img/demos/thumbnail.svg">
+    <img class="img" src="../../../assets/imgs/cp2077.jpg">
   </ion-thumbnail>
-  <ion-label class="txtProducto">
-    Texto
-  </ion-label>
+  <ion-col>
+    <ion-label class="txtProducto">
+      Metal Gear Rising:Revengeance
+    </ion-label>
+    <ion-label class="txtPrecio" >
+      49.99€
+    </ion-label>
+  </ion-col>
+  
   
 </ion-item>
