--- a/src/app/pages/login-page/login-page.page.html
+++ b/src/app/pages/login-page/login-page.page.html
@@ -1,5 +1,6 @@
 <ion-content>
   <ion-grid>
+    <form [formGroup]="formLogearme">
     <ion-row>
       <ion-col size="1"></ion-col>
       <ion-col size="10"><h1 id="titulo">Iniciar sesión:</h1></ion-col>
@@ -12,7 +13,7 @@
       <ion-col size="10">
         <ion-item>
           <ion-label position="floating">E-mail</ion-label>
-          <ion-input placeholder="Introducir e-mail"></ion-input>
+          <ion-input placeholder="Introducir e-mail" formControlName="mail"></ion-input>
         </ion-item>
       </ion-col>
       <ion-col size="1">
@@ -26,7 +27,7 @@
       <ion-col size="10">
         <ion-item>
           <ion-label position="floating">Password</ion-label>
-          <ion-input placeholder="Introducir contraseña"></ion-input>
+          <ion-input placeholder="Introducir contraseña" formControlName="password"></ion-input>
         </ion-item>
       </ion-col>
       <ion-col size="1">
@@ -50,12 +51,13 @@
 
       </ion-col>
       <ion-col size="10">
-        <ion-button id="btnLogin" fill="outline">Iniciar Sesión</ion-button>
+        <ion-button id="btnLogin" fill="outline" (click)="iniciarSesion()">Iniciar Sesión</ion-button>
       </ion-col>
       <ion-col size="1">
 
       </ion-col>
     </ion-row>
+  </form>
   </ion-grid>
 
 
@@ -78,7 +80,7 @@
             <ion-col size="11">
               <ion-item>
                 <ion-label position="floating">Nombre:</ion-label>
-              <ion-input type="text" placeholder="Introduce un email" ></ion-input>
+              <ion-input type="text" placeholder="Introduce un nombre" formControlName="nombre"></ion-input>
             </ion-item></ion-col>
             <ion-col size=".5"></ion-col>
           </ion-row>
@@ -88,7 +90,7 @@
             <ion-col size="11">
               <ion-item>
                 <ion-label position="floating">E-mail:</ion-label>
-              <ion-input type="text" placeholder="Introduce un email" ></ion-input>
+              <ion-input type="text" placeholder="Introduce un email" formControlName="mail"></ion-input>
             </ion-item></ion-col>
             <ion-col size=".5"></ion-col>
           </ion-row>
@@ -98,7 +100,7 @@
             <ion-col size="11">
               <ion-item>
                 <ion-label position="floating">Contraseña:</ion-label>
-              <ion-input type="text" placeholder="Introduce un email" ></ion-input>
+              <ion-input type="password" placeholder="Introduce una contraseña" formControlName="password" ></ion-input>
             </ion-item></ion-col>
             <ion-col size=".5"></ion-col>
           </ion-row>
