--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
           <ion-icon name="bag-outline"></ion-icon>
           <ion-label>Ver productors</ion-label>
         </ion-item>
-        <ion-item button="true" id="itemBottom">
+        <ion-item button="true" id="itemBottom" (click)="desloguearme()">
           <ion-icon name="close-circle-outline"></ion-icon>
           <ion-label>Cerrar sesión</ion-label>
         </ion-item>
