--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ion-menu contentId="main-content">
     <ion-header>
       <ion-toolbar>
-        <ion-title>NombreUsuario</ion-title>
+        <ion-title>{{usuario?.Nombre}}</ion-title>
       </ion-toolbar>
     </ion-header>
     <ion-content>
