--- a/src/app/components/producto-lista/producto-lista.component.html
+++ b/src/app/components/producto-lista/producto-lista.component.html
@@ -4,7 +4,7 @@
   </ion-thumbnail>
   <ion-col>
     <ion-label class="txtProducto">
-      Metal Gear Rising:Revengeance
+      Texto de título largo
     </ion-label>
     <ion-label class="txtPrecio" >
       49.99€
