--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -1,7 +1,7 @@
 <ion-card>
   <img alt="Silhouette of mountains" src="../../../assets/imgs/cp2077.jpg" />
   <ion-card-header>
-    <ion-card-title class="txtTitle">Metal Gear Rising</ion-card-title>
+    <ion-card-title class="txtTitle">Texto de título largo</ion-card-title>
   </ion-card-header>
   <ion-card-content>
     49.99€
