--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     </ion-header>
     <ion-content>
       <ion-list lines="full">
-        <ion-item button="true">
+        <ion-item button="true" (click)="navegarDetalles()">
           <ion-icon name="person-outline"></ion-icon>
           <ion-label>
             Perfil
