--- a/src/app/components/producto-lista/producto-lista.component.html
+++ b/src/app/components/producto-lista/producto-lista.component.html
@@ -1,13 +1,13 @@
 <ion-item>
   <ion-thumbnail slot="start" class="miniatura">
-    <img class="img" src="../../../assets/imgs/cp2077.jpg">
+    <img class="img" src="../../../assets/imgs/default.jpg">
   </ion-thumbnail>
   <ion-col>
     <ion-label class="txtProducto">
-      Texto de título largo
+      {{juego.Nombre}}
     </ion-label>
     <ion-label class="txtPrecio" >
-      49.99€
+      {{juego.Precio}}€
     </ion-label>
   </ion-col>
   
