--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -1,10 +1,10 @@
 <ion-card>
-  <img alt="Silhouette of mountains" src="../../../assets/imgs/cp2077.jpg" />
+  <img alt="Silhouette of mountains" src="../../../assets/imgs/default.jpg" />
   <ion-card-header>
-    <ion-card-title class="txtTitle">Texto de título largo</ion-card-title>
+    <ion-card-title class="txtTitle">{{juego.Nombre}}</ion-card-title>
   </ion-card-header>
   <ion-card-content>
-    49.99€
+    {{juego.Precio }}€
   </ion-card-content>
 </ion-card>
     
