--- a/src/app/pages/login-page/login-page.page.html
+++ b/src/app/pages/login-page/login-page.page.html
@@ -27,7 +27,7 @@
       <ion-col size="10">
         <ion-item>
           <ion-label position="floating">Password</ion-label>
-          <ion-input placeholder="Introducir contraseña" formControlName="password"></ion-input>
+          <ion-input placeholder="Introducir contraseña" formControlName="password" type="password"></ion-input>
         </ion-item>
       </ion-col>
       <ion-col size="1">
@@ -51,7 +51,7 @@
 
       </ion-col>
       <ion-col size="10">
-        <ion-button id="btnLogin" fill="outline" (click)="iniciarSesion()">Iniciar Sesión</ion-button>
+        <ion-button id="btnLogin" fill="outline" (click)="login()" >Iniciar Sesión</ion-button>
       </ion-col>
       <ion-col size="1">
 
@@ -67,7 +67,7 @@
       <ion-header>
         <ion-toolbar>
           <ion-buttons slot="end">
-            <ion-button (click)="cancelar()">Cancelar</ion-button>
+            <ion-button (click)="cancelar()" >Cancelar</ion-button>
           </ion-buttons>
           <ion-title>Registrarme</ion-title>
         </ion-toolbar>
@@ -108,7 +108,7 @@
           <ion-row>
             <ion-col size="0.5"></ion-col>
             <ion-col size="11">
-              <ion-button id="btnRegist" fill="outline">Registrarme</ion-button>
+              <ion-button id="btnRegist" fill="outline" (click)="registrarme()">Registrarme</ion-button>
             </ion-col>
             <ion-col size=".5"></ion-col>
           </ion-row>
